# fruits

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.rst  appveyor.yml  sugar.cmake
.github/: CONTRIBUTING.rst
app/: CMakeLists.txt
app/fruits/: CMakeLists.txt  sugar.cmake
app/fruits/breakfast/: CMakeLists.txt  main.cpp  sugar.cmake
app/fruits/breakfast/flatware/: Teaspoon.cpp  Teaspoon.hpp  sugar.cmake
app/fruits/dinner/: CMakeLists.txt  main.cpp  sugar.cmake
cmake/Hunter/: config.cmake
docs/: Makefile  conf.py  index.rst
example/: CMakeLists.txt
example/cmake/Hunter/: config.cmake
example/cmake/include/: config.cmake  init.cmake
example/fruits/: CMakeLists.txt  sugar.cmake
example/fruits/quick_meal/: CMakeLists.txt  main.cpp  sugar.cmake
example/fruits/vegan_party/: CMakeLists.txt  main.cpp  sugar.cmake
lib/: CMakeLists.txt  sugar.cmake
lib/fruits/: CMakeLists.txt  fruits.hpp  sugar.cmake
lib/fruits/rosaceae/: CMakeLists.txt  Pear.cpp  Pear.hpp  Plum.cpp  Plum.hpp  rosaceae.hpp  sugar.cmake
lib/fruits/rosaceae/unittest/: Pear.cpp  sugar.cmake
lib/fruits/tropical/: Avocado.cpp  Avocado.hpp  CMakeLists.txt  Pineapple.cpp  Pineapple.hpp  sugar.cmake  tropical.hpp
lib/fruits/tropical/unittest/: Avocado.cpp  Pineapple.cpp  sugar.cmake
test/fruits/: CMakeLists.txt  sugar.cmake
test/fruits/check_tropical/: CMakeLists.txt  sugar.cmake
test/fruits/check_tropical/data/: sugar.cmake
test/fruits/skin_off/: CMakeLists.txt
